syntax = "proto3";

option csharp_namespace = "Generated";

message ChatRequest
{
	string name = 1;
	string textmessage = 2;
}